# invoicer_rs

./: Cargo.toml  README.md  output.html  template.html
src/: main.rs
