[package]
name = "invoicer_rs"
version = "0.1.0"
edition = "2021"
authors = ["Floris @ floris@xylex.ai"]

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
anyhow = "1.0.96"
chrono = "0.4.39"
dotenv = "0.15.0"
moka = { version = "0.12.10", features = ["future"] }
pdf-extract = "0.8.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
supabase_rs = "0.4.1"
textwrap = "0.16.1"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.14.0", features = ["v4"] }
